evaluation/test_suite/negative/ub43/1.c
#include <stdio.h>

int main()
{
    int x[2] = {0};
    printf("%p\n", (void*)(x + 2));
}
